[gd_scene load_steps=5 format=2]

[ext_resource path="res://common/game/Flag.gd" type="Script" id=1]
[ext_resource path="res://assets/flag/blue_flag.png" type="Texture" id=2]
[ext_resource path="res://common/game/ProgressBar.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="Flag" type="Area2D"]
z_index = 5
collision_layer = 2
collision_mask = 2147483650
script = ExtResource( 1 )

[node name="FlagShape" type="CollisionShape2D" parent="."]
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="FlagShape"]
margin_left = -0.967575
margin_top = -10.4193
margin_right = 0.0324249
margin_bottom = 9.58067
color = Color( 0.290196, 0.137255, 0.027451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlagSprite" type="Sprite" parent="FlagShape"]
position = Vector2( 6.65, -6.1 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 2 )

[node name="RespawnTimer" type="Timer" parent="."]

[node name="RespawnBar" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( -30, 35 )
[connection signal="draw" from="." to="." method="_on_Flag_draw"]
